# synapse-mcp

./: .env.example  .gitignore  .mcp.json.example  README.md  docker-compose.yml  pyproject.toml
scripts/: bootstrap.sh
src/synapse_mcp/: client.py  parse.py  server.py  tools_abstract.py  tools_api.py
